# project-template

./: .gitignore  README.md  bump_version.py  init_project.py  pyproject.toml
.github/workflows/: bump-version.yml
project_template/: main.py
